--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -1,3 +1,7 @@
+.hide{
+  display: none;
+}
+
 .first-screen{
   width: 100vw;
   background-image: url("http://bqg.dev:8888/wp-content/uploads/2017/05/first-screen-bg.png");
@@ -248,6 +252,426 @@
   transition: 0.2s ease-in-out;
 }
 
+
+
+/**
+* Contacts page styles
+**/
+
+.contacts-page{
+  width: 100vw;
+  background-image: url("http://bqg.dev:8888/wp-content/uploads/2017/05/bg-contacts-page.png");
+  background-repeat: no-repeat;
+  background-size: 50%;
+  padding-top: 100px;
+  position: relative;
+}
+
+.contacts-page .right-column{
+  position: relative;
+  padding-bottom: 110px;
+  max-width: 45%;
+  left: 55%;
+}
+
+.contacts-page .heading-text{
+  font-family: "BebasNeue";
+  text-transform: uppercase;
+  font-size: 4.5em;
+  line-height: 1em;
+  font-weight: 400;
+  margin-bottom: 60px;
+}
+
+.contacts-page .heading-text span:after{
+  content: 'after';
+  position: absolute;
+  left: 0;
+  top: 0.9em;
+  color: transparent;
+  height: 11px;
+  width: 110px!important;
+  background: url(http://bqg.dev:8888/wp-content/uploads/2017/05/line-under-heading.png) repeat-x;
+}
+
+.contacts-page .simple-text{
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
+#map {
+  height: 600px;
+  width: 100%;
+}
+
+/* End of Contacts page styles */
+
+
+/**
+* Team page styles
+**/
+
+.team-page{
+  width: 100vw;
+  background-image: url("http://bqg.dev:8888/wp-content/uploads/2017/05/bg-team.png");
+  background-repeat: no-repeat;
+  background-size: 50%;
+  padding-top: 100px;
+  position: relative;
+}
+
+.team-page .right-column{
+  position: relative;
+  padding-bottom: 110px;
+  max-width: 45%;
+  left: 55%;
+}
+
+.team-page .heading-text{
+  font-family: "BebasNeue";
+  text-transform: uppercase;
+  font-size: 4.5em;
+  line-height: 1em;
+  font-weight: 400;
+  margin-bottom: 60px;
+}
+
+.team-page .heading-text span:after{
+  content: 'after';
+  position: absolute;
+  left: 0;
+  top: 0.9em;
+  color: transparent;
+  height: 11px;
+  width: 110px!important;
+  background: url(http://bqg.dev:8888/wp-content/uploads/2017/05/line-under-heading.png) repeat-x;
+}
+
+.team-page .simple-text{
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
+.team-grid{
+  width: 100vw;
+  z-index: 2;
+
+  .photo-left .worker-block {
+    width: 16.6666666%;
+    float: left;
+    z-index: 1;
+    background-color: rgba(64, 64, 64, .5);
+
+    .avatar {
+      width: 50%;
+      float: left;
+      z-index: 1;
+
+      img{
+        width: 100%;
+        height: auto;
+      }
+    }
+
+    .description-block{
+      width: 50%;
+      float: left;
+      z-index: 1;
+      font-size: 0.5em;
+    }
+
+    .gray-rectangle{
+      z-index: 9;
+      width: 160px;
+      height: 160px;
+      margin-left: 50%
+    }
+  }
+}
+
+/* End of Contacts page styles */
+
+/**
+* Single post page styles
+**/
+
+.post-wrapper{
+  width: 100vw;
+}
+
+.post-wrapper .inner-content{
+  position: relative;
+  width: 1120px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin: 0 auto;
+}
+
+.post-wrapper .back-link{
+  padding-bottom: 35px;
+  padding-top: 20px;
+}
+
+.post-wrapper .back-link a{
+  font-family: "BebasNeue";
+  padding-left: 20px;
+  color: $theme-grey;
+  font-size: 2em;
+  text-transform: uppercase;
+  transition: 0.2s;
+}
+
+.post-wrapper .back-link a:hover{
+  text-decoration: none;
+  color: $theme-yellow;
+  transition: 0.2s;
+}
+
+.post-wrapper .back-link a:before{
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 0;
+  margin-top: 10px;
+  border-style: solid;
+  border-width: 10.5px 11px 10.5px 0;
+  border-color: transparent #404040 transparent transparent;
+}
+
+.post-wrapper header{
+  width: 100%;
+  clear: both;
+  padding-bottom: 30px;
+}
+
+.post-wrapper .entry-title{
+  display: inline-block;
+}
+
+.post-wrapper .entry-title h1{
+  font-family: "BebasNeue";
+  padding-top: 30px;
+  font-size: 3em;
+  display: inline-block;
+  text-transform: uppercase;
+}
+
+.post-wrapper .entry-title h1:after{
+  content: "";
+  position: absolute;
+  margin-top: 45px;
+  left: 0;
+  height: 3px;
+  width: 100%!important;
+  background: #f1d53a;
+}
+
+.post-wrapper header .updated{
+  font-family: "BebasNeue";
+  display: inline-block;
+  padding-top: 35px;
+  float: right;
+  font-size: 2em;
+  text-transform: uppercase;
+}
+
+.post-wrapper .entry-content{
+  font-family: 'Roboto';
+  font-size: 0.9em;
+}
+
+.post-wrapper .bottom{
+  position: relative;
+  min-height: 100px;
+}
+
+.post-wrapper .social-share{
+  float: right;
+  padding-bottom: 30px;
+}
+
+.post-wrapper .social-share a{
+  color: #000;
+  height: 30px;
+  font-size: 3em;
+  transition: 0.3s;
+}
+
+.post-wrapper .social-share span{
+  transition: 0.3s;
+}
+
+.post-wrapper .social-share i{
+  color: #000;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.post-wrapper .social-share i:hover{
+  color: $theme-yellow;
+  transition: 0.3s;
+}
+
+/* End of Single post page styles */
+
+
+
+/**
+* News list page styles
+**/
+
+.page-header h1{
+  font-family: "BebasNeue";
+  text-transform: uppercase;
+  font-size: 90px;
+}
+
+.page-header h1:after{
+  content: '';
+  position: absolute;
+  top: 100px;
+  left: 0;
+  height: 11px;
+  width: 170px!important;
+  background: $theme-yellow;
+}
+
+.post-list{
+  width: 100vw;
+}
+
+.post-list .inner-content{
+  position: relative;
+  width: 1120px;
+  padding-bottom: 25px;
+  margin: 0 auto;
+}
+
+.post-list a{
+  display:  block;
+  width:  100%;
+  height: 100%;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.post-list a:hover{
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.post-list a:hover .post-list-item{
+  border: 3px solid $theme-yellow;
+  padding: 8px;
+  margin-left: -8px;
+  margin-right: -8px;
+  margin-bottom: -8px;
+  margin-top: -8px;
+  min-height: 217px;
+  transition: 0.3s ease-in-out;
+}
+
+.post-list a:hover .updated .the-day,
+.post-list a:hover .updated .the-month{
+  color: $theme-grey;
+  transition: 0.3s ease-in-out;
+}
+
+.post-list .post-list-item{
+  border: 3px solid $theme-grey;
+  display: block;
+  min-height: 201px;
+  transition: 0.3s;
+}
+
+.post-list .post-thumb{
+  width: 17.5%;
+  height: auto;
+  float: left;
+  top: 0;
+  position: relative;
+}
+
+.post-list .post-thumb img{
+  width: 100%;
+  height: 100%;
+}
+
+.post-list .main-content{
+  display: inline-block;
+  padding-left: 30px;
+  float: left;
+  width: 55%;
+}
+
+.post-list h1{
+  padding-top: 15px;
+  line-height: 0.6em;
+}
+
+.post-list .entry-title{
+  font-family: "BebasNeue";
+  text-transform: uppercase;
+  color: $theme-grey;
+  text-decoration: none;
+  padding-top: 20px;
+  font-size: 30px;
+  line-height: 1em;
+}
+
+.post-list .main-content .entry-title:after{
+  content: "";
+  position: absolute;
+  margin-top: 25px;
+  left: 20.45%;
+  height: 3px;
+  width: 165px!important;
+  background: #f1d53a;
+  transition: 0.3s;
+}
+
+.post-list a:hover .main-content .entry-title:after{
+  transition: 0.3s ease-in-out;
+  width: 51.5%!important;
+}
+
+.post-list .excerpt{
+  font-family: "Roboto";
+  color: $theme-grey;
+  font-size: 0.9em;
+}
+
+.post-list .updated{
+  width: 20%;
+  padding-top: 15px;
+  float: right;
+  text-align: center;
+  display: inline-block;
+}
+
+.post-list .the-day{
+  font-family: "BebasNeue";
+  font-size: 130px;
+  line-height: 0.9em;
+  color: #f5f5f5;
+  transition: 0.3s;
+}
+
+.post-list .the-month{
+  font-family: "BebasNeue";
+  font-size: 60px;
+  line-height: 0.9em;
+  color: #f5f5f5;
+  transition: 0.3s;
+}
+
+/* End of News list page styles */
+
 @media only screen and (max-width : 1500px){
 
   body{
@@ -259,15 +683,12 @@
     max-width: 975px;
   }
 
-  .header .top-menu{
-    padding-top: 20px;
-  }
-
-  .header .top-menu ul li{
+  .header .top-menu a{
      padding-right: 20px;
    }
 
   .header .lang{
+    padding-top: 0;
     line-height: 2.7em;
   }
 
@@ -370,15 +791,12 @@
     max-width: 975px;
   }
 
-  .header .top-menu{
-    padding-top: 20px;
-  }
-
-  .header .top-menu ul li{
+  .header .top-menu a{
     padding-right: 20px;
   }
 
   .header .lang{
+    padding-top: 0;
     line-height: 2.7em;
   }
 
@@ -533,19 +951,16 @@
     width: 80%;
   }
 
-  .header .top-menu{
-    padding-top: 20px;
-  }
-
-  .header .top-menu ul li{
+  .header .nav a{
     padding-right: 20px;
   }
 
-  .header .top-menu ul li a{
+  .header .top-menu a{
     font-size: 1.4em;
   }
 
   .header .lang{
+    padding-top: 5px;
     font-size: 1.4em;
     line-height: 3.2em;
   }
@@ -731,7 +1146,9 @@
   }
 
   .header{
-    min-height: 100px;
+    padding-top: 25px;
+    padding-bottom: 0;
+    min-height: 80px;
   }
 
   .header .inner-content{
@@ -740,19 +1157,20 @@
   }
 
   .header .logo img{
-    width: 80%;
+    width: 120%;
+  }
+
+  .header .logo{
+    width: 20%;
   }
 
   .header .top-menu{
     padding-top: 20px;
   }
 
-  .header .top-menu ul li{
-    padding-right: 20px;
-  }
-
-  .header .top-menu ul li a{
-    font-size: 1.4em;
+  .header .nav a{
+    font-size: 1em;
+    color: transparent;
   }
 
   .header .lang{
@@ -929,6 +1347,258 @@
     padding-left: 80px;
   }
 
+  /**
+  * Mobile menu
+  **/
+
+  .lang{
+    display: none;
+  }
+
+  $items: 4;
+  $transition-duration: 0.5s;
+  $transition-delay: 0.05s;
+
+
+  /* Basic styles */
+
+  * {
+    box-sizing: border-box;
+  }
+
+
+  /* Toggle functionality */
+
+  // To hide the checkbox
+  #toggle {
+    position: absolute;
+    left: -100%;
+    top: -100%;
+  }
+
+  #toggle:focus {
+
+    & ~ .toggle-container .button-toggle {
+      box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+  }
+
+  // Styles for the 'open' state, if the checkbox is checked
+  #toggle:checked {
+    // Any element you need to change the style if menu is open goes here, using the sibling selector (~) as follows
+
+    // Making the "X" icon using `:before` and `:after` pseudo-elements
+    & ~ .toggle-container .button-toggle {
+      box-shadow: 0 0 0 550px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+
+      &:hover {
+        box-shadow: 0 0 0 550px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1), 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+      }
+
+      &:before {
+        transform: translateY(-50%) rotate(45deg) scale(1);
+      }
+
+      &:after {
+        transform: translateY(-50%) rotate(-45deg) scale(1);
+      }
+    }
+
+    &:focus ~ .toggle-container .button-toggle {
+      box-shadow: 0 0 0 550px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1), 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+
+    // Open nav
+    & ~ .nav {
+      right: 0;
+      top: 0;
+      margin-bottom: 100px;
+      pointer-events: auto;
+      transform: translate(50px, 50px);
+
+      // Restoring nav items from "lines" in the menu icon
+      .nav-item {
+        right: 0;
+        top: 0;
+        color: #fff;
+        float: right;
+        clear: both;
+        letter-spacing: 0;
+        height: 40px;
+        line-height: 40px;
+        margin-top: 0;
+        opacity: 1;
+        transform: scaleY(1);
+        transition: $transition-duration, opacity 0.1s;
+
+        // Setting delays for the nav items in open transition
+        @for $i from 1 through $items {
+          &:nth-child(#{$i}) {
+            $delay: ($items - $i) * $transition-delay;
+            transition-delay: $delay;
+            &:before {
+              transition-delay: $delay;
+            }
+          }
+        }
+
+        // Hiding the lines
+        &:before {
+          opacity: 0;
+        }
+      }
+    }
+
+    // Dummy content
+    & ~ .dummy-content {
+      padding-top: 30px;
+
+      &:before {
+        background-color: rgba(0, 0, 0, 0.3);
+      }
+    }
+  }
+
+
+  /* Toggle button */
+
+  .button-toggle {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 25px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    border-radius: 100%;
+    transition: $transition-duration + 0.1;
+
+    // Shadow on hover
+    &:hover {
+      box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1), inset 0 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+
+    // Making the "X" icon using `:before` and `:after` pseudo-elements
+    // Initially hidden because `scale(0)` transformation
+
+    &:before, &:after {
+      position: absolute;
+      content: '';
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      border-radius: 5px;
+      transition: $transition-duration;
+    }
+
+    &:before {
+      transform: translateY(-50%) rotate(45deg) scale(0);
+    }
+
+    &:after {
+      transform: translateY(-50%) rotate(-45deg) scale(0);
+    }
+  }
+
+
+  /* Menu */
+
+  .nav {
+    display: inline-block;
+    margin: 25px 25px 20px;
+    // Don't want pointer-events as menu is closed
+    pointer-events: none;
+    transition: $transition-duration;
+    position: relative;
+    right: -85%;
+    top: -35px;
+  }
+
+  // Showing nav items as lines, making up the hamburger menu icon
+  .nav-item {
+    right: 0;
+    top: 0;
+    position: relative;
+    display: block;
+    float: right;
+    clear: both;
+    color: transparent;
+    font-size: 14px;
+    letter-spacing: -6.2px;
+    height: 7px;
+    line-height: 7px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    transform: scaleY(0.2);
+    transition: $transition-duration, opacity 1s;
+
+    // Setting delays for the nav items in close transition
+    @for $i from 1 through $items {
+      &:nth-child(#{$i}) {
+        $delay: ($i - 1) * $transition-delay;
+        transition-delay: $delay;
+        &:before {
+          transition-delay: $delay;
+        }
+      }
+    }
+
+    // Adjusting width for the first line
+    &:nth-child(1) {
+      letter-spacing: -8px;
+    }
+
+    // Adjusting width for the second line
+    &:nth-child(2) {
+      letter-spacing: -7px;
+    }
+
+    // Adjusting from the fourth element onwards
+    &:nth-child(n + 4) {
+      letter-spacing: -8px;
+      margin-top: -7px;
+      opacity: 0;
+    }
+
+    // Getting the lines for the hamburger menu icon
+    &:before {
+      position: absolute;
+      content: '';
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      transform: translateY(-50%) scaleY(5);
+      transition: $transition-duration;
+    }
+  }
+
+
+  /* Dummy content */
+
+  .dummy-content {
+    position: relative;
+    transition: $transition-duration;
+
+    &:before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
+      z-index: 2;
+      transition: $transition-duration;
+    }
+  }
+
 }
 
 @media only screen and(max-width: 480px){
@@ -940,6 +1610,10 @@
 
   .header .inner-content{
     max-width: 300px;
+  }
+
+  .nav{
+    right: -80%;
   }
 
   .first-screen{
@@ -960,9 +1634,13 @@
   .products .right-column {
     max-width: 300px;
   }
+
+  .footer .copyrights{
+    display: none;
+  }
 }
 
-@media only screen and(max-width: 480px){
+@media only screen and(max-width: 375px){
 
   body{
     margin-left: 0!important;
@@ -973,16 +1651,17 @@
     max-width: 280px;
   }
 
+  .nav{
+    right: -78%;
+  }
+
   .first-screen{
-    background-image: url("http://bqg.dev:8888/wp-content/uploads/2017/05/bg-first-screen-825.png");
-    background-repeat: no-repeat;
     background-size: 120%;
-    padding-top: 20px;
-    padding-bottom: 20px;
   }
 
   .first-screen .inner-content{
-    max-width: 280px;
+    max-width: 210px;
+    margin-left: 20px;
   }
 
   .about-us .inner-content{
@@ -991,5 +1670,26 @@
 
   .products .right-column {
     max-width: 280px;
+  }
+
+  .video .play-button{
+    top: 38%;
+    left: 44%;
+  }
+
+  .footer .left-column{
+    padding-left: 20px;
+  }
+
+  .footer .right-column{
+    padding-left: 60px;
+  }
+
+  .footer .right-column .column-2{
+    padding-left: 0;
+  }
+
+  .footer .copyrights{
+    display: none;
   }
 }
