--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -50,11 +50,27 @@
   padding-top: 10px;
 }
 
-.header .lang span:after{
+.header .lang ul{
+  list-style: none;
+}
+
+.header .lang .lang-item{
+  white-space: nowrap;
+  text-overflow: clip;
+  overflow:hidden;
+  max-width: 40px;
+}
+
+.header .lang .lang-item a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.header .lang ul:after{
   content: "";
   position: absolute;
   bottom: -20px;
-  right: 60px;
+  right: 25px;
   width: 0;
   height: 0;
   border-style: solid;
